// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI config parsing > should load .js config file 1`] = `
"Config: 
{
  _: [ 'config' ],
  verbose: true,
  config: '/Users/michael_hladky/WebstormProjects/quality-metrics-cli/e2e/cli-e2e/mocks/code-pushup.config.js',
  interactive: true,
  '$0': 'code-pushup',
  plugins: [
    {
      runner: [Object],
      audits: [Array],
      title: 'ChromeDevTools Lighthouse',
      slug: 'lighthouse',
      icon: 'lighthouse'
    }
  ],
  persist: { outputDir: 'tmp/cli-config-out.json' },
  categories: [],
  upload: {}
}
"
`;

exports[`CLI config parsing > should load .mjs config file 1`] = `
"Config: 
{
  _: [ 'config' ],
  verbose: true,
  config: '/Users/michael_hladky/WebstormProjects/quality-metrics-cli/e2e/cli-e2e/mocks/code-pushup.config.mjs',
  interactive: true,
  '$0': 'code-pushup',
  plugins: [
    {
      runner: [Object],
      audits: [Array],
      title: 'ChromeDevTools Lighthouse',
      slug: 'lighthouse',
      icon: 'lighthouse'
    }
  ],
  persist: { outputDir: 'tmp/cli-config-out.json' },
  categories: [],
  upload: {}
}
"
`;

exports[`CLI config parsing > should load .ts config file 1`] = `
"Config: 
{
  _: [ 'config' ],
  verbose: true,
  config: '/Users/michael_hladky/WebstormProjects/quality-metrics-cli/e2e/cli-e2e/mocks/code-pushup.config.ts',
  interactive: true,
  '$0': 'code-pushup',
  plugins: [
    {
      runner: [Object],
      audits: [Array],
      title: 'ChromeDevTools Lighthouse',
      slug: 'lighthouse',
      icon: 'lighthouse'
    }
  ],
  persist: { outputDir: 'tmp/cli-config-out.json' },
  categories: [],
  upload: {}
}
"
`;
